--- a/studsite/templates/students/update.html
+++ b/studsite/templates/students/update.html
@@ -1,7 +1,8 @@
-<form method="post" action="">
-{% csrf_token %}
-
-{{ form }}
-
-<input type="submit" value="Update" />
-</form>
+{% extends "students/base.html" %}
+{% block content %}
+    <form method="post" action="">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Update" />
+    </form>    
+{% endblock content %}
