--- a/studsite/templates/students/base.html
+++ b/studsite/templates/students/base.html
@@ -1,3 +1,5 @@
+<html>
+<meta content="text/html"> 
 <h1 style="color:green;">Students challange</h1>
 
 {% if not user.is_authenticated %}
@@ -20,4 +22,7 @@
     {% block content %}
     
     {% endblock content %}
+<p>request time: {{ dd }}|</p>
+<p>sql queries count: {{ sql_count }}</p>
 {% endif %}
+</html>
