--- a/studsite/templates/users/password_change.html
+++ b/studsite/templates/users/password_change.html
@@ -1,5 +1,5 @@
-{% if user.is_authenticated %}
+{# {% if user.is_authenticated %} #}
     {{ form }}
-{% else %}
-    <p>You are not authenticated yet.</p>
-{% endif %}
+{# {% else %} #}
+    {# <p>You are not authenticated yet.</p> #}
+{# {% endif %} #}
