added tag that return url for object's admin page

--- a/studsite/templates/students/base.html
+++ b/studsite/templates/students/base.html
@@ -33,5 +33,6 @@
 <p>
     go to admin for current user: <a href="{{ user|admin_url }}">user</a>
 </p>
+<a href="{% edit user %}">{% edit user %}</a>
 {% endif %}
 </html>
