--- a/studsite/templates/students/group_detail.html
+++ b/studsite/templates/students/group_detail.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% load student_extras %}
     <a href="{% url 'group_delete' pk=group.pk %}">delete group</a>
-    {% for st in group.student_set.all %}
+    {% for st in group.students.all %}
         <p>
             {{ st.full_name }} |
             <a href="{% url 'student_delete' pk=st.pk %}">delete</a> | 
